[package]
name = "ars"
version = "0.1.0"
edition = "2024"
authors = ["Jiangfeng Huang <paraworker@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Paraworker/ars"
description = "Crafting Wayland with Rust"

[dependencies]
rustix = { version = "1", features = ["fs"] }
